some docu updates